<resources>
    <string name="app_name">labsheet11</string>
    <string name="AppName">The CourseApp</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Register Form</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="Message">Message</string>
    <string name="Subject">Subject</string>
    <string name="send">send</string>
    <string name="MessageRecy">Message</string>
    <string name="channel_name">notificationChennel</string>
    <string name="channel_description">this is pratice</string>
</resources>